# computational-intelligence-lab

./: .gitignore  CIL2023_Exercise_1_TODO_version.ipynb  EigenFaces.ipynb  README.md  paper_review.md  pyproject.toml
