[tool.poetry]
name = "computational-intelligence-lab"
version = "0.1.0"
description = ""
authors = ["Gaia Di Lorenzo <gaid@bendingspoons.com>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
torch = "^1.13.1"
keras = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
